// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`I18nCollectiveTags can ignore untranslated 1`] = `
<div>
  Open source, 
  Meetup
</div>
`;

exports[`I18nCollectiveTags can provide a custom renderer 1`] = `
<div>
  <div>
    HelloWorld
     is 
    untranslated
  </div>
  <div>
    Meetup
     is 
    translated
  </div>
</div>
`;

exports[`I18nCollectiveTags renders a list of tag 1`] = `
<div>
  Open source
</div>
`;

exports[`I18nCollectiveTags renders a list of tag 2`] = `
<div>
  not translated, 
  Open source, 
  Meetup
</div>
`;

exports[`I18nCollectiveTags renders a single tag 1`] = `
<div>
  Open source
</div>
`;

exports[`I18nCollectiveTags renders a single tag 2`] = `
<div>
  not translated
</div>
`;
